WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190376
CrashTracer: backboardd at Recursion :: QuartzCore: CA::Render::Updater::prepare_sublayer0
https://bugs.webkit.org/show_bug.cgi?id=190376
Summary
CrashTracer: backboardd at Recursion :: QuartzCore: CA::Render::Updater::prep...
Dean Jackson
Reported
2018-10-08 16:10:57 PDT
CrashTracer: backboardd at Recursion :: QuartzCore: CA::Render::Updater::prepare_sublayer0
Attachments
Patch
(2.95 KB, patch)
2018-10-08 16:14 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2018-10-08 16:11:22 PDT
<
rdar://problem/44986520
>
Dean Jackson
Comment 2
2018-10-08 16:14:06 PDT
Created
attachment 351827
[details]
Patch
Simon Fraser (smfr)
Comment 3
2018-10-08 16:15:35 PDT
Comment on
attachment 351827
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=351827&action=review
> Source/WebCore/ChangeLog:3 > + CrashTracer: backboardd at Recursion :: QuartzCore: CA::Render::Updater::prepare_sublayer0
Maybe don't put this internal goop in the title.
> LayoutTests/compositing/layer-creation/deep-tree.html:36 > - makeDeepTree(500, document.getElementById('deep')); > + makeDeepTree(129, document.getElementById('deep'));
Where is the new test result?
Dean Jackson
Comment 4
2018-10-08 16:19:44 PDT
Committed
r236945
: <
https://trac.webkit.org/changeset/236945
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug