CrashTracer: backboardd at Recursion :: QuartzCore: CA::Render::Updater::prepare_sublayer0 https://bugs.webkit.org/show_bug.cgi?id=190376 <rdar://problem/44986520>

Reviewed by Tim Horton.

Source/WebCore:

Very deep CoreAnimation layer trees can cause problems. Reduce our maximum
depth from 256 to 128.

Modified existing test: compositing/layer-creation/deep-tree.html

* platform/graphics/ca/GraphicsLayerCA.cpp: Cap the depth at 128.

LayoutTests:

* compositing/layer-creation/deep-tree.html:

Canonical link: https://commits.webkit.org/205332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236945 268f45cc-cd09-0410-ab3c-d52691b4dbfc